chore: Fix go_mod_tidy_examples.yml

--- a/.github/workflows/go_mod_tidy_examples.yml
+++ b/.github/workflows/go_mod_tidy_examples.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [opened, reopened]
     paths:
-      - go.mod'
+      - 'go.mod'
 jobs:
   go-mod-tidy-example:
     timeout-minutes: 5
