--- a/.github/workflows/go_mod_tidy_examples.yml
+++ b/.github/workflows/go_mod_tidy_examples.yml
@@ -15,6 +15,8 @@ jobs:
         plugin: [simple_plugin]
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_CQ_BOT }}
       - name: Set up Go 1.x
         uses: actions/setup-go@v4
         with:
