chore: Add `priority_merge_label` to `.kodiak.toml`

--- a/.github/.kodiak.toml
+++ b/.github/.kodiak.toml
@@ -14,3 +14,4 @@ title = "pull_request_title"
 [merge]
 blocking_labels = ["wip", "no automerge"]
 notify_on_conflict = false
+priority_merge_label = "priority merge"
