--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-*       @yevgenypats @hermanschaaf @erezrokah
+*       @cloudquery/cloudquery-framework
 CHANGELOG.md
 .release-please-manifest.json
 go.mod
