chore: Add more govet lint rules

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,6 +19,11 @@ linters-settings:
       - var
       - func
     disable-dec-order-check: false
+  govet:
+    enable-all: true
+    disable:
+      - fieldalignment
+      - shadow
 
   revive:
     enable-all-rules: true
