chore: Switch test workflows to ubicloud runners

--- a/.github/workflows/lint_golang.yml
+++ b/.github/workflows/lint_golang.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   golangci:
     name: Lint with GolangCI
-    runs-on: large-ubuntu-plugin-sdk
+    runs-on: ubicloud-standard-8
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
