--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
   unitests:
     strategy:
       matrix:
-        os: [large-ubuntu-plugin-sdk, large-windows-plugin-sdk, macos-latest]
+        os: [ubicloud-standard-8, large-windows-plugin-sdk, macos-latest]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
     steps:
