chore: Use string instead of array to set `ignored_types`

--- a/.github/workflows/add_tags.yml
+++ b/.github/workflows/add_tags.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: bcoe/conventional-release-labels@v1
         with:
           type_labels: '{ "feat": "feat", "fix": "fix", "chore": "chore", "refactor": "refactor", "test": "test", "breaking": "breaking" }'
-          ignored_types: []
+          ignored_types: '[]'
