chore: Add permissions to all workflows

--- a/.github/workflows/go_mod_tidy_examples.yml
+++ b/.github/workflows/go_mod_tidy_examples.yml
@@ -5,6 +5,9 @@ on:
     types: [opened, reopened]
     paths:
       - 'go.mod'
+permissions:
+  contents: read
+
 jobs:
   go-mod-tidy-example:
     timeout-minutes: 5
