--- a/.golangci.yml
+++ b/.golangci.yml
@@ -73,6 +73,8 @@ linters:
           disabled: true
         - name: enforce-switch-style
           disabled: true
+        - name: identical-switch-branches
+          disabled: true
   exclusions:
     generated: lax
     presets:
